# revival-c

./: main.c  meson.build  utils.c  utils.h
